# Camera_sys_ros

./: .gitignore  README.md  camera.urdf  camera.xacro  camera_config.rviz  frames_2024-12-18_19.57.31.gv  test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_bringup_pkg/share/camera_bringup_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_bringup_pkg/share/camera_bringup_pkg/cmake/: camera_bringup_pkgConfig.cmake
install/camera_bringup_pkg/share/camera_bringup_pkg/launch/: main_launch.py
install/camera_cpp_pkg/share/camera_cpp_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_cpp_pkg/share/camera_cpp_pkg/cmake/: camera_cpp_pkgConfig.cmake
install/camera_interface_pkg/share/camera_interface_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_interface_pkg/share/camera_interface_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+22 more)
install/camera_main_pkg/share/camera_main_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_py_pkg/share/camera_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/camera_bringup_pkg/: CMakeLists.txt
src/camera_bringup_pkg/launch/: main_launch.py
src/camera_cpp_pkg/: CMakeLists.txt  package.xml
src/camera_interface_pkg/: CMakeLists.txt  package.xml
src/camera_interface_pkg/msg/: PointsList.msg  RobotState.msg
src/camera_interface_pkg/srv/: SetCalibration.srv  UpdateN20SetPoints.srv
src/camera_main_pkg/: package.xml  setup.cfg  setup.py
src/camera_main_pkg/camera_main_pkg/: camera_node.py  controller.py  custom_tf.py  interpolator.py  point_processor.py  tf_test.py  video_processor.py
src/camera_py_pkg/: setup.cfg  setup.py
src/camera_py_pkg/camera_py_pkg/: point_processor.py  video_processor.py
src/log/: latest_list
(+98 files in other folders)
