<?xml version="1.0"?>
<package format="3">
  <name>camera_main_pkg</name>
  <version>0.1.0</version>
  <description>Package for handling camera-related functionality in ROS 2.</description>

  <maintainer email="achintyaharsha03@gmail.com">Achintya</maintainer>

  <license>Apache License 2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>camera_interface_pkg</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- Optional testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>
  
  <export>
    <!-- Export information -->
    <build_type>ament_python</build_type>
  </export>
</package>
