<?xml version="1.0"?>
<package format="3">
  <name>camera_py_pkg</name>
  <version>0.0.1</version>  <!-- Update the version to reflect your package version -->
  <description>A simple Python camera node for ROS 2</description>  <!-- Updated description -->

  <maintainer email="achintyaharsha03@gmail.com">achintya</maintainer>
  <license>TODO: License declaration</license>  <!-- You can specify a license here -->

  <depend>rclpy</depend>  <!-- Declare rclpy as a dependency for Python nodes -->

  <exec_depend>camera_interface_pkg</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- Test dependencies (optional, but useful for ROS 2 packages) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>  <!-- Build type for Python packages -->
  </export>
</package>
